# fourier-backtest-binance

./: .env.example  .gitignore  .ruff.toml  Dockerfile  IMPLEMENTATION_M2.md  IMPLEMENTATION_M3.md  IMPLEMENTATION_M7.md  IMPLEMENTATION_M8.md  IMPLEMENTATION_M9.md  IMPLEMENTATION_SUMMARY.md  M7_SUMMARY.md  M9_SUMMARY.md  README.md  README.zh-CN.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
app/ui/: live.py  main.py  optimization_tab.py  portfolio_tab.py
config/: presets.py  settings.py
core/analysis/: exits.py  fourier.py  incremental.py  mtf.py  signals.py  sizing.py  spectral.py  stops.py
core/backtest/: engine.py
core/data/: binance_client.py  cache.py  exceptions.py  loader.py  streaming.py
core/optimization/: __init__.py  export.py  monte_carlo.py  params.py  runner.py  search.py  visualization.py  walkforward.py
core/portfolio/: analytics.py  executor.py  portfolio.py  weights.py
core/utils/: time.py
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CONFIGURATION.md  CONFIGURATION.zh-CN.md  FAQ.md  FAQ.zh-CN.md  README.md
examples/: mtf_strategy_example.py  optimization_example.py  portfolio_example.py
tests/: test_backtest.py  test_backtest_enhanced.py  test_data_fetch_cache.py  test_exits.py  test_fourier.py  test_incremental.py  test_integration_m3.py  test_mtf.py  test_optimization.py  test_portfolio.py  test_portfolio_analytics.py  test_portfolio_weights.py  test_presets.py  test_signals.py  test_sizing.py  test_spectral.py  test_stops.py  test_strategy_integration.py  test_streaming.py
